methods.picture.PictureMono2.scala.error
Compilation error:
PictureMono2:30: error: identifier expected but integer literal found.
    setPos(x:0,y:0)
             ^PictureMono2:31: error: ')' expected but '}' found.
  }
  ^